Update sample app.
Use two checkboxes that are kep in sync by a single underlying
preference.

--- a/rx-preferences-sample/src/main/res/layout/sample_activity.xml
+++ b/rx-preferences-sample/src/main/res/layout/sample_activity.xml
@@ -6,45 +6,20 @@
     android:orientation="vertical"
     android:padding="40dp">
 
-  <Button
-      android:id="@+id/foo"
+  <CheckBox
+      android:id="@+id/foo_1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"
       android:text="@string/foo"
       />
-  <TextView
-      android:id="@+id/foo_value"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="10dp"
-      />
 
-  <Button
-      android:id="@+id/bar"
+  <CheckBox
+      android:id="@+id/foo_2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"
-      android:text="@string/bar"
-      />
-  <TextView
-      android:id="@+id/bar_value"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="10dp"
-      />
-
-  <Button
-      android:id="@+id/qaz"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/qaz"
-      />
-  <TextView
-      android:id="@+id/qaz_value"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="10dp"
+      android:text="@string/foo"
       />
 
 </LinearLayout>
