Implemented delete all preferences action.

--- a/rx-preferences-sample/src/main/res/layout/sample_activity.xml
+++ b/rx-preferences-sample/src/main/res/layout/sample_activity.xml
@@ -22,4 +22,11 @@
       android:text="@string/foo"
       />
 
+  <Button
+      android:id="@+id/btnClear"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/clear"
+      />
+
 </LinearLayout>
