Resolve issue #104 (How do I save edittext values)

--- a/rx-preferences-sample/src/main/res/layout/sample_activity.xml
+++ b/rx-preferences-sample/src/main/res/layout/sample_activity.xml
@@ -22,4 +22,10 @@
       android:text="@string/foo"
       />
 
+  <EditText
+      android:id="@+id/text"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="text"
+      />
 </LinearLayout>
