Resolve issue #104 (How do I save edittext values) (#105)
* Resolve issue #104 (How do I save edittext values)

* Added second EditText in sample which is updated from the backing preference.

--- a/rx-preferences-sample/src/main/res/layout/sample_activity.xml
+++ b/rx-preferences-sample/src/main/res/layout/sample_activity.xml
@@ -22,4 +22,17 @@
       android:text="@string/foo"
       />
 
+  <EditText
+      android:id="@+id/text_1"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="text"
+      />
+
+  <EditText
+      android:id="@+id/text_2"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="text"
+      />
 </LinearLayout>
